# fraud-detection-neural-networks

./: .gitignore  README.md  coursework.html  coursework.ipynb  coursework.py  coursework_code.py  pyproject.toml  sample.html  sample.ipynb
tutorials/: kaggle.ipynb  medium-article.ipynb
